plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.fisa'
version = '0.0.1-SNAPSHOT'
description = 'bank'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Authorization Server
	implementation 'org.springframework.security:spring-security-oauth2-authorization-server'
	// Resource Server
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	// Flyway
	implementation 'org.flywaydb:flyway-core'
	implementation "org.flywaydb:flyway-mysql"
	// thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// CDC / Kafka
	implementation 'org.springframework.kafka:spring-kafka'
	implementation('io.debezium:debezium-embedded:2.7.3.Final') {
		exclude group: 'io.swagger.core.v3', module: 'swagger-annotations'
	}
	implementation('io.debezium:debezium-connector-mysql:2.7.3.Final') {
		exclude group: 'io.swagger.core.v3', module: 'swagger-annotations'
	}
}

spotless {
	java {
		googleJavaFormat('1.17.0')
		importOrder('', 'java', 'javax', 'org', 'com')
		removeUnusedImports()
	}

	groovyGradle {
		target '*.gradle'
		greclipse()
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('installGitHook', Copy) {
	from file('scripts/pre-commit')
	into file('.git/hooks')
	fileMode 0755
}

tasks.named('build') {
	dependsOn 'installGitHook'
}
